--- a/package.json
+++ b/package.json
@@ -9,19 +9,50 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@heroui/react": "^2.6.14",
+    "@hookform/resolvers": "^4.1.2",
+    "@kinde-oss/kinde-auth-nextjs": "^2.5.1",
+    "@mui/material": "^6.4.4",
+    "@prisma/client": "^6.4.1",
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.6.0",
+    "axios": "^1.8.1",
+    "cloudinary": "^2.5.1",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
+    "firebase": "^11.4.0",
+    "framer-motion": "^12.4.1",
+    "micro": "^10.0.1",
+    "moment": "^2.30.1",
+    "multer": "^1.4.5-lts.1",
+    "next": "15.1.6",
+    "next-themes": "^0.4.4",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-dropzone": "^14.3.8",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
+    "react-time-ago": "^7.3.3",
+    "recharts": "^2.15.1",
+    "stripe": "^17.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "prisma": "^6.4.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
